# SamplePythonProject

./: LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: tests.yml
src/sampleproject/: main.py
tests/: sample_test.py
